--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Matt Jenkins <matt@majenko.co.uk>
 sentence=Control library for TPA2016 audio amplifier
 paragraph=Control library for the TPA2016 audio amplifier\n
 url=https://github.com/MajenkoLibraries/TPA2016
-category=Audio
+category=Device Control
 architectures=chipkit
 includes=TPA2016.h
